Fix the blurry line

--- a/style.scss
+++ b/style.scss
@@ -10,8 +10,6 @@ body {
   display: grid;
   place-items: center;
   canvas {
-    width: 1200px;
-    height: 800px;
     border: 2px solid gray;
     position: relative;
 
